--- a/.env
+++ b/.env
@@ -15,11 +15,11 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=f3b6394db24f69ec9756cac948c2cc6d
+APP_SECRET=50c0fb22d0429259e234135ada8c538b
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://maildev:25
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -30,3 +30,14 @@ APP_SECRET=f3b6394db24f69ec9756cac948c2cc6d
 DATABASE_URL="mysql://db:db@db:3306/roselle?serverVersion=5.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> blackfire ###
+BLACKFIRE_CLIENT_ID=
+BLACKFIRE_CLIENT_TOKEN=
+BLACKFIRE_SERVER_ID=
+BLACKFIRE_SERVER_TOKEN=
+###< blackfire ###
+
+###> sentry/sentry-symfony ###
+SENTRY_DSN=
+###< sentry/sentry-symfony ###
