--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-###> php-cs-fixer ###
-/php-cs-fixer
-###< php-cs-fixer ###
-
 ###> docker ###
 /.docker/data/mysql
 ###< docker ###
@@ -16,15 +12,24 @@
 /vendor/
 ###< symfony/framework-bundle ###
 
-###> symfony/phpunit-bridge ###
-.phpunit
-.phpunit.result.cache
-/phpunit.xml
-###< symfony/phpunit-bridge ###
-
 ###> symfony/webpack-encore-bundle ###
 /node_modules/
 /public/build/
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
+
+###> friendsofphp/php-cs-fixer ###
+/.php-cs-fixer.php
+/.php-cs-fixer.cache
+###< friendsofphp/php-cs-fixer ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+tests/report
+###< phpunit/phpunit ###
+
+###> composer-unused ###
+composer-unused.phar
+###< composer-unused ###
