--- a/composer.json
+++ b/composer.json
@@ -16,32 +16,32 @@
     "phpdocumentor/reflection-docblock": "^5.2",
     "sensio/framework-extra-bundle": "^6.1",
     "sentry/sentry-symfony": "^4.1",
-    "symfony/asset": "5.3.*",
-    "symfony/console": "5.3.*",
-    "symfony/dotenv": "5.3.*",
-    "symfony/expression-language": "5.3.*",
+    "symfony/asset": "6.0.*",
+    "symfony/console": "6.0.*",
+    "symfony/dotenv": "6.0.*",
+    "symfony/expression-language": "6.0.*",
     "symfony/flex": "^1.3.1",
-    "symfony/form": "5.3.*",
-    "symfony/framework-bundle": "5.3.*",
-    "symfony/http-client": "5.3.*",
-    "symfony/intl": "5.3.*",
-    "symfony/mailer": "5.3.*",
-    "symfony/mime": "5.3.*",
+    "symfony/form": "6.0.*",
+    "symfony/framework-bundle": "6.0.*",
+    "symfony/http-client": "6.0.*",
+    "symfony/intl": "6.0.*",
+    "symfony/mailer": "6.0.*",
+    "symfony/mime": "6.0.*",
     "symfony/monolog-bundle": "^3.1",
-    "symfony/notifier": "5.3.*",
-    "symfony/process": "5.3.*",
-    "symfony/property-access": "5.3.*",
-    "symfony/property-info": "5.3.*",
-    "symfony/runtime": "5.3.*",
-    "symfony/security-bundle": "5.3.*",
-    "symfony/serializer": "5.3.*",
-    "symfony/string": "5.3.*",
-    "symfony/translation": "5.3.*",
+    "symfony/notifier": "6.0.*",
+    "symfony/process": "6.0.*",
+    "symfony/property-access": "6.0.*",
+    "symfony/property-info": "6.0.*",
+    "symfony/runtime": "6.0.*",
+    "symfony/security-bundle": "6.0.*",
+    "symfony/serializer": "6.0.*",
+    "symfony/string": "6.0.*",
+    "symfony/translation": "6.0.*",
     "symfony/twig-bundle": "^5.3",
-    "symfony/validator": "5.3.*",
-    "symfony/web-link": "5.3.*",
+    "symfony/validator": "6.0.*",
+    "symfony/web-link": "6.0.*",
     "symfony/webpack-encore-bundle": "^1.11",
-    "symfony/yaml": "5.3.*",
+    "symfony/yaml": "6.0.*",
     "twig/extra-bundle": "^2.12|^3.0",
     "twig/twig": "^2.12|^3.0"
   },
@@ -67,7 +67,15 @@
     "preferred-install": {
       "*": "dist"
     },
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "captainhook/plugin-composer": true,
+      "phpstan/extension-installer": true,
+      "symfony/flex": true,
+      "symfony/runtime": true,
+      "symfony/thanks": true,
+      "composer/package-versions-deprecated": true
+    }
   },
   "autoload": {
     "psr-4": {
@@ -102,7 +110,7 @@
   "extra": {
     "symfony": {
       "allow-contrib": false,
-      "require": "5.3.*"
+      "require": "6.0.*"
     }
   }
 }
