--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,11 @@
   "prefer-stable": true,
   "require": {
     "php": ">=8.0",
-    "composer/package-versions-deprecated": "1.11.99.1",
-    "doctrine/annotations": "^1.0",
+    "composer/package-versions-deprecated": "^1.11",
     "doctrine/doctrine-bundle": "^2.3",
     "doctrine/doctrine-migrations-bundle": "^3.1",
     "doctrine/orm": "^2.8",
     "friendsofphp/php-cs-fixer": "^3.0",
-    "phpdocumentor/reflection-docblock": "^5.2",
     "sensio/framework-extra-bundle": "^6.1",
     "sentry/sentry-symfony": "^4.1",
     "symfony/asset": "6.0.*",
@@ -42,15 +40,15 @@
     "symfony/web-link": "6.0.*",
     "symfony/webpack-encore-bundle": "^1.11",
     "symfony/yaml": "6.0.*",
-    "twig/extra-bundle": "^2.12|^3.0",
-    "twig/twig": "^2.12|^3.0"
+    "twig/extra-bundle": "^3.0",
+    "twig/twig": "^3.0"
   },
   "require-dev": {
     "captainhook/captainhook": "^5.8",
     "captainhook/plugin-composer": "^5.2",
     "phake/phake": "4.*",
     "phpstan/extension-installer": "^1.1",
-    "phpstan/phpstan-symfony": "^0.12.26",
+    "phpstan/phpstan-symfony": "^1.1",
     "phpunit/phpunit": "^9.5",
     "symfony/browser-kit": "^5.3",
     "symfony/css-selector": "^5.3",
