--- a/.docker/apache_php/Dockerfile
+++ b/.docker/apache_php/Dockerfile
@@ -4,7 +4,7 @@ FROM lavoweb/php-8.0:latest
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 # Install Node.js (& npm)
-RUN curl -sL https://deb.nodesource.com/setup_14.x | bash - \
+RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash - \
     && apt-get install -y nodejs
 
 # Install PCOV extension for code coverage
