--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "name": "roselle/roselle",
   "description": "Roselle's professional website",
   "license": "proprietary",
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "prefer-stable": true,
   "require": {
     "php": ">=8.1",
@@ -11,7 +11,6 @@
     "doctrine/doctrine-bundle": "^2.3",
     "doctrine/doctrine-migrations-bundle": "^3.1",
     "doctrine/orm": "^2.8",
-    "friendsofphp/php-cs-fixer": "^3.0",
     "sensio/framework-extra-bundle": "^6.1",
     "sentry/sentry-symfony": "^4.1",
     "symfony/asset": "6.1.*",
@@ -46,6 +45,7 @@
   "require-dev": {
     "captainhook/captainhook": "^5.8",
     "captainhook/plugin-composer": "^5.2",
+    "friendsofphp/php-cs-fixer": "^3.0",
     "phake/phake": "4.*",
     "phpstan/extension-installer": "^1.1",
     "phpstan/phpstan-symfony": "^1.1",
